--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             sendButton.disabled = true;
 
             try {
-                const response = await fetch('http://localhost:3000/chat', {
+                const response = await fetch('/api/chat', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
