--- a/index.html
+++ b/index.html
@@ -1,71 +1,147 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AI Assistant Chat</title>
+    <title>AI Assistant - Prairie Style</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto Slab', serif;
             margin: 0;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #f4e1c1; /* Warm, prairie-inspired background */
+            color: #2c1810; /* Deep brown text */
         }
+        
         .chat-container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            padding: 20px;
+            max-width: 900px;
+            margin: 20px auto;
+            background: #fff8ef;
+            border: 2px solid #8b4513;
+            box-shadow: 0 4px 12px rgba(139, 69, 19, 0.15);
+            padding: 30px;
+            position: relative;
         }
+
+        /* Geometric pattern border */
+        .chat-container::before {
+            content: '';
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            right: 10px;
+            bottom: 10px;
+            border: 1px solid #8b4513;
+            pointer-events: none;
+        }
+
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+            border-bottom: 2px solid #8b4513;
+            padding-bottom: 20px;
+        }
+
+        .header h1 {
+            font-size: 2.5em;
+            color: #8b4513;
+            margin: 0;
+            letter-spacing: 2px;
+        }
+
         .chat-messages {
-            height: 400px;
+            height: 500px;
             overflow-y: auto;
             padding: 20px;
-            border: 1px solid #eee;
-            border-radius: 10px;
-            margin-bottom: 20px;
+            border: 1px solid #d4a76a;
+            background: #fffaf5;
+            margin-bottom: 30px;
         }
+
         .message {
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 10px;
+            margin: 15px 0;
+            padding: 15px;
+            border-radius: 0; /* Square corners for geometric feel */
             max-width: 80%;
+            position: relative;
         }
+
         .user-message {
-            background-color: #007bff;
-            color: white;
+            background-color: #8b4513;
+            color: #fff8ef;
             margin-left: auto;
+            border-left: 15px solid #5e2f0d;
         }
+
         .assistant-message {
-            background-color: #e9ecef;
-            color: black;
+            background-color: #d4a76a;
+            color: #2c1810;
+            margin-right: auto;
+            border-right: 15px solid #8b4513;
         }
+
         .input-area {
             display: flex;
-            gap: 10px;
+            gap: 15px;
+            padding: 20px 0;
+            border-top: 2px solid #8b4513;
         }
+
         #user-input {
             flex-grow: 1;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+            padding: 15px;
+            border: 2px solid #8b4513;
+            background: #fffaf5;
+            font-family: 'Roboto Slab', serif;
             font-size: 16px;
+            color: #2c1810;
+            transition: all 0.3s ease;
         }
+
+        #user-input:focus {
+            outline: none;
+            box-shadow: 0 0 0 2px #d4a76a;
+        }
+
         #send-button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: white;
+            padding: 15px 30px;
+            background-color: #8b4513;
+            color: #fff8ef;
             border: none;
-            border-radius: 5px;
+            font-family: 'Roboto Slab', serif;
+            font-size: 16px;
             cursor: pointer;
+            transition: all 0.3s ease;
         }
+
+        #send-button:hover {
+            background-color: #5e2f0d;
+        }
+
         #send-button:disabled {
-            background-color: #cccccc;
+            background-color: #d4a76a;
+            cursor: not-allowed;
+        }
+
+        /* Custom scrollbar */
+        .chat-messages::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        .chat-messages::-webkit-scrollbar-track {
+            background: #fff8ef;
+        }
+
+        .chat-messages::-webkit-scrollbar-thumb {
+            background: #8b4513;
+            border: 3px solid #fff8ef;
         }
     </style>
 </head>
 <body>
     <div class="chat-container">
+        <div class="header">
+            <h1>Prairie AI Assistant</h1>
+        </div>
         <div class="chat-messages" id="chat-messages"></div>
         <div class="input-area">
             <input type="text" id="user-input" placeholder="Type your message..." />
@@ -91,7 +167,6 @@
             const message = userInput.value.trim();
             if (!message) return;
 
-            // Add user message
             addMessage(message, true);
             userInput.value = '';
             sendButton.disabled = true;
