--- a/index.html
+++ b/index.html
@@ -8,148 +8,138 @@
             font-family: 'Montserrat', sans-serif;
             margin: 0;
             padding: 20px;
-            background: linear-gradient(145deg, #1a1a1a, #212121);
-            color: #e0e0e0;
+            background-color: #f9f9f9;
+            color: #333;
             min-height: 100vh;
         }
 
         .chat-container {
-            max-width: 900px;
+            max-width: 800px;
             margin: 20px auto;
-            background: #2d2d2d;
-            border: 1px solid #4a3b63;
-            border-radius: 20px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            padding: 30px;
-            position: relative;
-            overflow: hidden;
+            background: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
 
         .header {
             text-align: center;
-            margin-bottom: 30px;
-            padding-bottom: 20px;
-            border-bottom: 1px solid #3d3d3d;
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #eee;
         }
 
         .header h1 {
-            font-size: 2.2em;
+            font-size: 1.8em;
             margin: 0;
-            letter-spacing: 1px;
-            font-weight: 300;
-            background: linear-gradient(45deg, #d4af37, #f4e5ac);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
+            letter-spacing: 0.5px;
+            font-weight: 500;
+            color: #333;
         }
 
         .header p {
-            color: #9c89b8;
-            margin-top: 10px;
-            font-style: italic;
-            font-weight: 300;
+            color: #777;
+            margin-top: 8px;
+            font-size: 0.9em;
         }
 
         .chat-messages {
-            height: 500px;
+            height: 400px;
             overflow-y: auto;
-            padding: 20px;
-            border-radius: 15px;
-            background: #232323;
-            margin-bottom: 30px;
+            padding: 15px;
+            border-radius: 8px;
+            background: #f5f5f5;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
         }
 
         .message {
-            margin: 15px 0;
-            padding: 18px;
-            border-radius: 18px;
-            max-width: 85%;
+            margin: 10px 0;
+            padding: 12px 15px;
+            border-radius: 8px;
+            max-width: 80%;
             position: relative;
-            line-height: 1.5;
-            font-weight: 300;
+            line-height: 1.4;
+            font-size: 0.9em;
         }
 
         .user-message {
-            background: linear-gradient(145deg, #4a3b63, #5d4a7d);
-            border-left: 3px solid #d4af37;
-            color: #ffffff;
+            background-color: #d9f7be;
+            border: 1px solid #b7eb8f;
             margin-left: auto;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            color: #333;
         }
 
         .assistant-message {
-            background: linear-gradient(145deg, #2a2a2a, #323232);
-            border-left: 3px solid #9c89b8;
-            color: #e0e0e0;
+            background-color: #e6f7ff;
+            border: 1px solid #91d5ff;
             margin-right: auto;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+            color: #333;
         }
 
         .input-area {
             display: flex;
-            gap: 15px;
-            padding: 20px 0;
-            border-top: 1px solid #3d3d3d;
+            gap: 10px;
+            padding: 15px 0;
+            border-top: 1px solid #eee;
         }
 
         #user-input {
             flex-grow: 1;
-            padding: 16px 20px;
-            border: none;
-            border-radius: 12px;
-            background: #232323;
+            padding: 12px 15px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
             font-family: 'Montserrat', sans-serif;
-            font-size: 16px;
-            color: #ffffff;
-            transition: all 0.3s ease;
+            font-size: 14px;
+            color: #333;
+            background: #fff;
         }
 
         #user-input:focus {
             outline: none;
-            box-shadow: 0 0 0 2px #4a3b63;
-            background: #2a2a2a;
+            border-color: #1890ff;
+            box-shadow: 0 0 3px rgba(24, 144, 255, 0.3);
         }
 
         #send-button {
-            padding: 16px 30px;
-            background: linear-gradient(145deg, #d4af37, #b4941f);
-            color: #ffffff;
+            padding: 12px 20px;
+            background-color: #1890ff;
+            color: #fff;
             border: none;
-            border-radius: 12px;
+            border-radius: 8px;
             font-family: 'Montserrat', sans-serif;
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: background-color 0.3s ease;
             font-weight: 500;
         }
 
         #send-button:hover {
-            background: linear-gradient(145deg, #e5c04c, #d4af37);
-            transform: translateY(-1px);
+            background-color: #40a9ff;
         }
 
         #send-button:disabled {
-            background-color: #3d3d3d;
+            background-color: #d9d9d9;
             cursor: not-allowed;
-            transform: none;
         }
 
         .chat-messages::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
 
         .chat-messages::-webkit-scrollbar-track {
-            background: #232323;
-            border-radius: 4px;
+            background: #f1f1f1;
+            border-radius: 3px;
         }
 
         .chat-messages::-webkit-scrollbar-thumb {
-            background: #4a3b63;
-            border-radius: 4px;
+            background: #ccc;
+            border-radius: 3px;
         }
 
         .chat-messages::-webkit-scrollbar-thumb:hover {
-            background: #5d4a7d;
+            background: #aaa;
         }
     </style>
 </head>
@@ -157,7 +147,7 @@
     <div class="chat-container">
         <div class="header">
             <h1>Particle System Assistant</h1>
-            <p>inspired by Joshua Jay</p>
+            <p>Your friendly assistant for particle systems</p>
         </div>
         <div class="chat-messages" id="chat-messages"></div>
         <div class="input-area">
@@ -165,14 +155,12 @@
             <button id="send-button">Send</button>
         </div>
     </div>
-
     <script>
         const chatMessages = document.getElementById('chat-messages');
         const userInput = document.getElementById('user-input');
         const sendButton = document.getElementById('send-button');
         const userId = 'user-' + Math.random().toString(36).substr(2, 9);
 
-        // Determine the API URL based on the environment
         const API_URL = window.location.hostname === 'localhost'
             ? 'http://localhost:3000/api/chat'
             : '/api/chat';
@@ -189,35 +177,26 @@
             const message = userInput.value.trim();
             if (!message) return;
 
-            console.log('Attempting to send message:', message);
             addMessage(message, true);
             userInput.value = '';
             sendButton.disabled = true;
 
             try {
-                console.log('Sending fetch request to:', API_URL);
                 const response = await fetch(API_URL, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({
-                        message: message,
-                        userId: userId
-                    })
+                    body: JSON.stringify({ message, userId })
                 });
-                console.log('Received response:', response);
 
                 const data = await response.json();
-                console.log('Response data:', data);
                 addMessage(data.response, false);
             } catch (error) {
-                console.error('Detailed error:', error);
-                console.error('Error stack:', error.stack);
-                addMessage('Sorry, there was an error processing your request.', false);
+                addMessage('An error occurred while processing your request.', false);
+            } finally {
+                sendButton.disabled = false;
             }
-
-            sendButton.disabled = false;
         }
 
         sendButton.addEventListener('click', sendMessage);
